# python-devops-aws-project1

./: .commitlintrc.yml  .gitignore  .releaserc.json  Makefile  README.md  package.json
.github/: CHANGELOG.md  dependabot.yml  package-lock.json
.github/actions/aws-auth/: action.yml
.github/actions/deploy-env/: action.yml
.github/actions/docker-build/: action.yml
.github/actions/ecs/deploy/: action.yml
.github/actions/publish-test-results/: action.yml
.github/actions/terraform/apply/: action.yml
.github/actions/terraform/plan/: action.yml
.github/actions/terraform/validate/: action.yml
.github/workflows/: _build-and-push.yml  cd-ec2-ansible.yml  cd-ecs-fargate.yml  cd-ecs.yml  cd-eks-gitops.yml  ci.yml  dependabot-auto-merge.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  release.yml  staging.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 11717889bb78_create_initial.py  99943975a87b_add_status_in_table_games.py  f766c18ebd79_allow_table_game_player2_nullable.py
backend/app/: main.py
backend/app/api/: game.py  health.py  users.py
backend/app/api/game/: check_winner.py  game.py
backend/app/core/: config.py  constants.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: game.py  health.py  user.py
backend/app/services/: game_logic.py
backend/tests/: conftest.py  test_game.py  test_health.py  test_users.py
backend/tests/fixtures/: auth.py  client.py  db.py  settings.py
backend/tests/integration/api/: __init__.py  test_api_endpoints.py
backend/tests/integration/auth/: __init__.py  test_auth_flow.py
backend/tests/integration/database/: __init__.py  test_database_ops.py
backend/tests/unit/repositories/: __init__.py
backend/tests/unit/services/: __init__.py  test_user_service.py
backend/tests/unit/utils/: __init__.py  test_security.py
config/: .env.dev  .env.dev.example  .env.example  .env.production  .env.test  .env.test.example  environment-setup.md  terraform.tfvars.example
deploy/: .gitignore  DOCKER_COMPOSE_SETUP.md  docker-compose.yml
docs/: ARCHITECTURE.md  CHECKOV_QUICK_REFERENCE.md  CHECKOV_SECURITY_FIXES.md  DEPENDABOT_DELIVERY_SUMMARY.md  DEPENDABOT_QUICK_REFERENCE.md  DEPENDABOT_SETUP.md  ONBOARDING.md  TERRAFORM_SECURITY_FIXES_SUMMARY.md  TERRAFORM_SECURITY_HARDENING.md  TEST_ARCHITECTURE.md
frontend/: Dockerfile  README.md  README_ANGULAR.md  angular.json  eslint.config.js  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/app/: Homepage.js  Joingame.js  Login.js  Signup.js
frontend/src/app/: app.component.spec.ts
frontend/src/app/services/: api.client.ts
frontend/src/environments/: environment.ts
infra/: .gitignore  README.md  main.tf  providers.tf
infra/modules/alb/: main.tf
infra/modules/ecs/: main.tf  outputs.tf
infra/modules/network/: main.tf
infra/modules/rds/: main.tf
terraform_bootstrap/: .aws.local.env.example  Makefile  README.md
terraform_bootstrap/bootstrap/: main.tf  outputs.tf  provider.tf  variables.tf
